--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://ibrsec.github.io/pomotodo-vite/",
+  "homepage": "https://ibrsec.github.io/pomotodo-vite-project/",
   "name": "pomotodo",
   "private": true,
   "version": "0.0.0",
